2017-03-28  Michael Wiegand <michael.wiegand@greenbone.net>

	Remove remnants of previously removed 'dumpfile' support.

	* doc/openvassd.8.in: Remove documentation of of 'dumpfile' option.

	* src/CMakeLists.txt: Remove handling of OPENVASSD_DEBUGMSG.

2017-03-27  Juan Jose Nicola  <juan.nicola@greenbone.net>

	Remove handling of dumpfile for stderr and stdout.

	* src/openvassd.c (openvassd_defaults): Remove default option
	dumpfile.
	(start_daemon_mode): Remove redirects of stdout and stderr and
	creation of dumpfile.
	(set_daemon_mode): Does not close stdin, stdout and stderr.

	* src/utils.c (is_scanner_only_pref): Remove check for dumpfile.

	* INSTALL: Remove reference accordingly.

	* CMakeLists.txt: Remove set of OPENVASSD_DEBUGMSG.

2017-03-27  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* nasl_text_utils.c (nasl_int): Define r variable as long int
	instead of int to support bigger numbers.

2017-03-27  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* src/pluginscheduler.c (plugin_add): Use nvticache_get_filename
	instead of nvticache_get_name.

2017-03-27  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* src/openvassd.c (main): Add preprocessor directives to check
	the gnutls version.

2017-03-27  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/pluginload.c (plugins_reload_from_dir): Call nvticache_save()
	after finishing nvts loading. This ensures that Redis periodic saving
	isn't needed and that only nvticache is saved on disk.

2017-03-27  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* src/openvassd.c (main): Call openvas_SSL_init to initialize gnutls to
	avoid SIGSEGV in gnutls version prior to 3.3.0.

2017-03-24  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* nasl/nasl_smb.c (nasl_win_cmd_exec): Use wmiexec.py instead of winexe.

2017-03-23  Michael Wiegand <michael.wiegand@greenbone.net>

	* src/nasl_plugins.c (nasl_plugin_add): Adjust documentation with
	recent parameter name change.
